# EventSystem

./: .clang-format  CMakeLists.txt
DB/: nexus.db
src/: ConcurrentQueue.hpp  Event.cpp  Event.hpp  EventHandler.hpp  EventManager.cpp  EventManager.hpp  TaskScheduler.cpp  TaskScheduler.hpp  main.cpp
src/common/: Datatypes.hpp  Flags.hpp
src/events/: DayNightEvent.cpp  DayNightEvent.hpp  Event.cpp  Event.hpp  ResponseEvent.cpp  ResponseEvent.hpp
src/sqlite/: CMakeLists.txt  sqlite3.h
src/tasks/: DayNightTask.cpp  DayNightTask.hpp  Task.cpp  Task.hpp
src/tools/: DBGenerator.cpp  DBGenerator.hpp  DBManager.cpp  DBManager.hpp  Macro.cpp  Macro.hpp
